--- a/Bukinist/appsettings.json
+++ b/Bukinist/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Database": {
-    "Type": "MSSQL",
+    "Type": "SQLite",
     "ConnectionStrings": {
-      "MSSQL": "Data Source=DESKTOP-D3GSO7P;Initial Catalog=bukinist;Integrated Security=True;TrustServerCertificate=True"
+      "MSSQL": "Data Source=DESKTOP-D3GSO7P;Initial Catalog=bukinist;Integrated Security=True;TrustServerCertificate=True",
+      "SQLite": "Data Source=c:\\db\\mydb.db;"
     }
   }
 }
