--- a/Bukinist.DAL/Bukinist.DAL.csproj
+++ b/Bukinist.DAL/Bukinist.DAL.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bukinist.interfaces\Bukinist.interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
